RESOLVED FIXED190433
REGRESSION (r236678): Keyboard scrolling with arrow keys doesn't work on iOS
https://bugs.webkit.org/show_bug.cgi?id=190433
Summary REGRESSION (r236678): Keyboard scrolling with arrow keys doesn't work on iOS
Tim Horton
Reported 2018-10-10 11:17:18 PDT
REGRESSION (r236678): Keyboard scrolling with arrow keys doesn't work on iOS
Attachments
Patch (2.88 KB, patch)
2018-10-10 11:17 PDT, Tim Horton
simon.fraser: review+
thorton: commit-queue-
Tim Horton
Comment 1 2018-10-10 11:17:41 PDT
Tim Horton
Comment 2 2018-10-10 11:18:59 PDT
Simon Fraser (smfr)
Comment 3 2018-10-10 11:28:16 PDT
Comment on attachment 351972 [details] Patch Can we test this?
Tim Horton
Comment 4 2018-10-10 11:29:15 PDT
Tim Horton
Comment 5 2018-10-10 11:42:07 PDT
Comment on attachment 351972 [details] Patch Err, somehow the #import got left behind from the index.
Tim Horton
Comment 6 2018-10-10 11:43:39 PDT
Note You need to log in before you can comment on or make changes to this bug.