REGRESSION (r236678): Keyboard scrolling with arrow keys doesn't work on iOS https://bugs.webkit.org/show_bug.cgi?id=190433 <rdar://problem/45111986>

Reviewed by Simon Fraser.

* UIProcess/ios/WKKeyboardScrollingAnimator.mm:
(-[WKKeyboardScrollingAnimator keyboardScrollForEvent:]):
(-[WKKeyboardScrollingAnimator beginWithEvent:]): Deleted.
(-[WKKeyboardScrollViewAnimator beginWithEvent:]): Deleted.
r236678 changes the characters in charactersIgnoringModifiers to match AppKit.
We similarly need to update WKKeyboardScrollingAnimator's comparison.


Canonical link: https://commits.webkit.org/205390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237011 268f45cc-cd09-0410-ab3c-d52691b4dbfc